@@ -5285,85 +5285,6 @@ operator|!=
 literal|null
 condition|)
 block|{
-comment|// try to publish as recovering right away
-try|try
-block|{
-name|coreContainer
-operator|.
-name|getZkController
-argument_list|()
-operator|.
-name|publish
-argument_list|(
-name|core
-operator|.
-name|getCoreDescriptor
-argument_list|()
-argument_list|,
-name|ZkStateReader
-operator|.
-name|RECOVERING
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e
-parameter_list|)
-block|{
-name|Thread
-operator|.
-name|currentThread
-argument_list|()
-operator|.
-name|interrupt
-argument_list|()
-expr_stmt|;
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|log
-argument_list|,
-literal|""
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Throwable
-name|e
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|log
-argument_list|,
-literal|""
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|e
-operator|instanceof
-name|Error
-condition|)
-block|{
-throw|throw
-operator|(
-name|Error
-operator|)
-name|e
-throw|;
-block|}
-block|}
 name|core
 operator|.
 name|getUpdateHandler
